Updated DateRangeLabel; updated chart appearance; fixed collapse button in Range Pickers

--- a/plugins/rangepicker.css
+++ b/plugins/rangepicker.css
@@ -30,7 +30,7 @@
     transition: transform 0.3s ease-out;
 }
 
-.collapse-rangepicker.expanded .collapse-rangepicker-icon  {
+.collapse-rangepicker.collapsed .collapse-rangepicker-icon  {
     transform: rotate(180deg);
   }
 
@@ -60,24 +60,6 @@
     margin-bottom: 5px; /* Spazio a destra del testo in grassetto */
 }
 
-@media (max-width: 1310px) {
-    .ms-fixedrangepicker-action {
-      -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-      -moz-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-      position: absolute;
-      background-color: #FFFFFF;
-      /* overflow: hidden; */
-      display: flex;
-      left: 4px;
-      top: 54px;
-      /* height: 200px; */
-      flex-direction: column;
-      margin: 0;
-      border: none;
-    }
-}
-
 @media (min-width: 769px) {
     div#mapstore-freerangepicker-map,
     div#mapstore-fixedrangepicker-map {
@@ -95,3 +77,13 @@
         /* visibility: hidden; */
     }
 }
+
+@media (max-width: 1310px) {
+    .daterangelabel {
+      color: white;
+      bottom: 20px;   /* Sposta l'elemento a 20px dal fondo */
+      left: 50%;      /* Mantieni centrato orizzontalmente */
+      transform: translateX(-50%);  /* Mantieni la traduzione per centrarlo */
+      top: auto;      /* Assicurati che 'top' non sovrascriva il 'bottom' */
+    }
+  }
